--- a/ahbottomnavigation/build.gradle
+++ b/ahbottomnavigation/build.gradle
@@ -25,7 +25,7 @@ ext {
 }
 
 android {
-    compileSdkVersion 25
+    compileSdkVersion 26
     buildToolsVersion '28.0.3'
 
     defaultConfig {
@@ -43,7 +43,7 @@ android {
 }
 
 dependencies {
-    implementation 'com.android.support:design:25.3.1'
+    implementation 'com.google.android.material:material:1.0.0'
 }
 
 // Place it at the end of the file
